objects/FSL_IA_FC__c.object
<CustomObject>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Derate_Value_1__c</fullName>
        <label>Derate Value 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Derate_Value_2__c</fullName>
        <label>Derate Value 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Derate_Value_3__c</fullName>
        <label>Derate Value 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Derate_value__c</fullName>
        <formula>&apos;Derate Value 1: &apos;+ Derate_Value_1__c + br()+
&apos;Derate Value 2: &apos;+ Derate_Value_2__c + br()+
&apos;Derate Value 3: &apos;+ Derate_Value_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Derate value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FMI__c</fullName>
        <label>FMI</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL_0_to_2_Hours_Probability__c</fullName>
        <label>0 to 2 Hours Probability</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FSL_2_to_4_Hours_Probability__c</fullName>
        <label>2 to 4 Hours Probability</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FSL_4_to_6_Hours_Probability__c</fullName>
        <label>4 to 6 Hours Probability</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FSL_Over_6_Hours_Probability__c</fullName>
        <label>Over 6 Hours Probability</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fault_Code_Description__c</fullName>
        <label>Fault Code Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fault_Code_Type__c</fullName>
        <label>Fault Code Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Related</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Non Prioritized</fullName>
                </value>
                <value>
                    <fullName>Prioritized</fullName>
                    <isActive>false</isActive>
                    <label>Prioritized</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Labor_Time__c</fullName>
        <formula>IF( NOT( ISBLANK(FSL_0_to_2_Hours_Probability__c * 100) ), &apos;0 to 2 Hours Probability: &apos; + TEXT(FSL_0_to_2_Hours_Probability__c * 100)+ &apos;%&apos;, &apos;&apos;) + br()+
IF( NOT( ISBLANK(FSL_2_to_4_Hours_Probability__c * 100) ), &apos;2 to 4 Hours Probability: &apos; + TEXT(FSL_2_to_4_Hours_Probability__c * 100)+ &apos;%&apos;, &apos;&apos;) + br()+
IF( NOT( ISBLANK(FSL_4_to_6_Hours_Probability__c * 100) ), &apos;4 to 6 Hours Probability: &apos; + TEXT(FSL_4_to_6_Hours_Probability__c * 100)+ &apos;%&apos;, &apos;&apos;) + br()+
IF( NOT( ISBLANK(FSL_Over_6_Hours_Probability__c * 100) ), &apos;Over 6 Hours Probability: &apos; + TEXT(FSL_Over_6_Hours_Probability__c * 100)+ &apos;%&apos;, &apos;&apos;)</formula>
        <label>Labor Time Bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Prioritized_FC_SO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Non Prioritized FC SO</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Non Prioritized IA Fault Codes</relationshipLabel>
        <relationshipName>Non_Prioritized_FC_SO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OccurenceTime__c</fullName>
        <label>OccurenceTime</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occurrence_Time__c</fullName>
        <formula>IF(OR(ISBLANK(OccurenceTime__c), OccurenceTime__c = &apos;0&apos;), &apos;&apos;, TEXT(FLOOR(VALUE(OccurenceTime__c)/3600)) + &quot; Hours &quot; + 
TEXT(FLOOR(MOD(VALUE(OccurenceTime__c),3600)/60)) + &quot; Minutes &quot; + 
TEXT(MOD(MOD(VALUE(OccurenceTime__c),3600),60)) + &quot; Seconds&quot;)</formula>
        <label>Fault Code Occurrence Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P_Code__c</fullName>
        <label>P Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prioritized_FC_SO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prioritized FC SO</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Prioritized IA Fault Codes</relationshipLabel>
        <relationshipName>Prioritized_IA_Faultcode</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prioritized_FC_SR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prioritized FC SR</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Prioritized IA Fault Codes</relationshipLabel>
        <relationshipName>Prioritized_IA_FC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_Code_Description__c</fullName>
        <label>Reason Code Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_Code__c</fullName>
        <label>Reason Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Fault_Codes__c</fullName>
        <label>Related Fault Codes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_Cause_Component_1__c</fullName>
        <label>Root Cause Component 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_Cause_Component_2__c</fullName>
        <label>Root Cause Component 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_Cause_Component_3__c</fullName>
        <label>Root Cause Component 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_Cause_Likelihood_1__c</fullName>
        <label>Root Cause Likelihood 1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Root_Cause_Likelihood_2__c</fullName>
        <label>Root Cause Likelihood 2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Root_Cause_Likelihood_3__c</fullName>
        <label>Root Cause Likelihood 3</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Root_Fault_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associated Primary Fault Code</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>Root Fault has to be one of the Prioritized Fault Code</errorMessage>
            <filterItems>
                <field>FSL_IA_FC__c.Fault_Code_Type__c</field>
                <operation>equals</operation>
                <value>Prioritized</value>
            </filterItems>
            <filterItems>
                <field>$Source.Prioritized_FC_SR__c</field>
                <operation>equals</operation>
                <valueField>FSL_IA_FC__c.Prioritized_FC_SR__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FSL_IA_FC__c</referenceTo>
        <relationshipLabel>IA Fault Codes</relationshipLabel>
        <relationshipName>IA_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rootcause_Component_Likelihood__c</fullName>
        <formula>IF( NOT( ISBLANK(Root_Cause_Component_1__c ) ), Root_Cause_Component_1__c + &apos; - &apos; + TEXT(Root_Cause_Likelihood_1__c * 100) + &apos;%&apos;, &apos;&apos;) + br()+
IF( NOT( ISBLANK(Root_Cause_Component_2__c ) ), Root_Cause_Component_2__c + &apos; - &apos; + TEXT(Root_Cause_Likelihood_2__c * 100) + &apos;%&apos;, &apos;&apos;) + br()+
IF( NOT( ISBLANK(Root_Cause_Component_3__c ) ), Root_Cause_Component_3__c + &apos; - &apos; + TEXT(Root_Cause_Likelihood_3__c * 100) + &apos;%&apos;, &apos;&apos;) + br()+
IF( NOT( ISBLANK(Root_Cause_Component_4__c ) ), Root_Cause_Component_4__c + &apos; - &apos; + TEXT(Root_Cause_Likelihood_4__c * 100) + &apos;%&apos;, &apos;&apos;)</formula>
        <label>Root Cause - Likelihood</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPN_FMI_PCODE__c</fullName>
        <formula>&apos;SPN: &apos;+  SPN__c  + br()+
&apos;FMI: &apos;+  FMI__c + br()+
&apos;PCODE: &apos;+  P_Code__c</formula>
        <label>SPN-FMI/PCODE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPN__c</fullName>
        <label>SPN</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Order__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Service Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>IA Fault Codes</relationshipLabel>
        <relationshipName>IA_Fault_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Request__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Service Request</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>IA_Faults</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shutdown_Description__c</fullName>
        <label>Shutdown Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnPrioritized_FC_SR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UnPrioritized FC SR</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Non Prioritized IA Fault Codes</relationshipLabel>
        <relationshipName>UnPrioritized_IA_FC</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>IA Fault Code</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Cummins Fault Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IA Fault Codes</pluralLabel>
    <recordTypes>
        <fullName>Prioritized_FC</fullName>
        <active>true</active>
        <label>Prioritized FC</label>
    </recordTypes>
    <recordTypes>
        <fullName>UnPrioritized_FC</fullName>
        <active>true</active>
        <label>UnPrioritized FC</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>